# mpc-jellyfish

./: .gitignore  CHANGELOG.md  Cargo.toml  rustfmt.toml
.github/workflows/: build.yml
plonk/: Cargo.toml
plonk/benches/: bench.rs  collaborative_proof.rs
plonk/examples/: proof_of_exp.rs
plonk/src/: errors.rs  lib.rs  testing_apis.rs
plonk/src/circuit/: transcript.rs
plonk/src/circuit/plonk_verifier/: gadgets.rs  mod.rs  poly.rs  structs.rs
plonk/src/multiprover/: mod.rs  mpc_transcript.rs  multiprover_kzg.rs
plonk/src/multiprover/gadgets/: arithmetic.rs  mod.rs
plonk/src/multiprover/primitives/: mod.rs  mpc_transcript.rs  multiprover_kzg.rs
plonk/src/multiprover/proof_system/: constraint_system.rs  error.rs  mod.rs  proof_linking.rs  prover.rs  snark.rs  structs.rs
plonk/src/proof_system/: batch_arg.rs  mod.rs  proof_linking.rs  prover.rs  snark.rs  structs.rs  verifier.rs
plonk/src/transcript/: rescue.rs  solidity.rs
primitives/: Cargo.toml
primitives/benches/: advz.rs  bls_signature.rs  merkle_path.rs  pcs.rs  reed_solomon.rs
primitives/src/: aead.rs  commitment.rs  elgamal.rs  lib.rs  prf.rs  toeplitz.rs  utils.rs
primitives/src/circuit/: commitment.rs  elgamal.rs  prf.rs
primitives/src/circuit/merkle_tree/: mod.rs  universal_merkle_tree.rs
primitives/src/circuit/rescue/: mod.rs  native.rs  non_native.rs
primitives/src/circuit/signature/: schnorr.rs
primitives/src/merkle_tree/: append_only.rs  internal.rs  light_weight.rs  macros.rs  mod.rs  universal_merkle_tree.rs
primitives/src/merkle_tree/namespaced_merkle_tree/: hash.rs  mod.rs  proof.rs
primitives/src/pcs/: errors.rs  poly.rs  transcript.rs
primitives/src/pcs/multilinear_kzg/: batching.rs  mod.rs  srs.rs  util.rs
primitives/src/pcs/univariate_kzg/: mod.rs  srs.rs
primitives/src/reed_solomon_code/: mod.rs
primitives/src/rescue/: mod.rs  sponge.rs
primitives/src/rescue/rescue_constants/: bn254_base.rs  ed_on_bls12_377_base.rs  ed_on_bls12_381_base.rs  ed_on_bn254_base.rs
primitives/src/signatures/: bls_over_bls12381.rs  schnorr.rs
primitives/src/vid/: advz.rs
primitives/src/vrf/: blsvrf.rs
primitives/tests/vid/: mod.rs
relation/: Cargo.toml
relation/src/: constants.rs  constraint_system.rs  errors.rs  lib.rs  traits.rs
relation/src/gadgets/: arithmetic.rs  cmp.rs  emulated.rs  logic.rs  mod.rs  range.rs
relation/src/gadgets/ecc/: glv.rs  mod.rs  msm.rs
relation/src/gadgets/ecc/emulated/: short_weierstrass.rs  twisted_edwards.rs
relation/src/gadgets/ultraplonk/: lookup_table.rs  mod_arith.rs  non_native_gates.rs  range.rs
relation/src/gates/: arithmetic.rs  logic.rs  mod.rs
relation/src/proof_linking/: arithmetization.rs  linkable_circuit.rs  mod.rs
scripts/: check_no_std.sh  run_tests.sh
utilities/src/: conversion.rs  lib.rs  multi_pairing.rs  serialize.rs
