[package]
name = "mpc-plonk"
description = "UltraPlonk implementation over an MPC field"
# can change back to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bn254 = { version = "0.4.0", optional = true }
ark-ec = "0.4.0"
ark-ff = { version = "0.4.0", features = ["asm"] }
ark-mpc = { workspace = true }
ark-poly = "0.4.2"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
async-trait = "0.1"
derivative = { version = "2", features = ["use_core"] }
displaydoc = { version = "0.2.3", default-features = false }
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "^1.0"
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.0" }
futures = "0.3"
hashbrown = "0.13.2"
itertools = { workspace = true }
jf-primitives = { path = "../primitives", default-features = false }
mpc-relation = { path = "../relation", default-features = false }
jf-utils = { path = "../utilities" }
merlin = { version = "3.0.0", default-features = false }
num-bigint = { version = "0.4", default-features = false }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3.1", default-features = false }
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha3 = "^0.10"
tagged-base64 = "0.3.3"

[dev-dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
criterion = { version = "0.5", features = ["async", "async_tokio"] }
hex = "^0.4.3"
lazy_static = "1.4"
tokio = "1.33"

# Benchmarks
[[bench]]
name = "plonk-benches"
path = "benches/bench.rs"
harness = false

[[bench]]
name = "collaborative_proof"
harness = false
required-features = ["test_apis", "test-srs"]

[features]
all-tests = ["ark-mpc/test_helpers", "jf-primitives/test-srs"]
default = ["parallel", "std"]
stats = ["ark-mpc/stats"]
std = [
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "downcast-rs/std",
    "itertools/use_std",
    "jf-primitives/std",
    "mpc-relation/std",
    "jf-utils/std",
    "num-bigint/std",
    "rand_chacha/std",
    "sha3/std",
]
test_apis = ["ark-bn254", "rand", "ark-mpc/test_helpers"]
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-mpc/multithreaded_executor",
    "ark-poly/parallel",
    "ark-std/parallel",
    "jf-utils/parallel",
    "mpc-relation/parallel",
    "jf-primitives/parallel",
    "dep:rayon",
]
test-srs = []

[[example]]
name = "proof-of-exp"
path = "examples/proof_of_exp.rs"
required-features = ["test-srs"]
